<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actionbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:orientation="vertical"
    tools:context="com.yzh.smartsmoking.activity.MainActivity">

    <com.customview.selfheader.HeaderRightImageView
        android:id="@+id/header_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftIconVisible="gone"
        app:rightIcon="@drawable/home_share"
        app:rightIconVisible="gone" />
    <!--app:rightIcon="@drawable/home_share"-->
    <!--android:background="@color/color_header_bg"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_50"
        android:layout_marginTop="@dimen/vertical_20"
        android:orientation="vertical">
        <!--android:layout_marginLeft="@dimen/horizontal_26"-->
        <TextView
            android:id="@+id/tv_home_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_50sp" />
        <!--android:text="09:28"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_16"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/horizontal_6">

            <TextView
                android:id="@+id/tv_home_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/font_22sp" />
            <!-- android:text="7月31日"-->
            <TextView
                android:id="@+id/tv_home_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_12"
                android:textColor="@color/white"
                android:textSize="@dimen/font_22sp" />
            <!--android:text="周一"-->
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_50"
            android:layout_marginRight="@dimen/horizontal_50"
            android:orientation="horizontal">
            <!--android:layout_marginTop="@dimen/vertical_200"-->

            <LinearLayout
                android:id="@+id/ll_main_smoking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <!--android:background="@color/white"-->

                <TextView
                    android:layout_width="@dimen/horizontal_100"
                    android:layout_height="@dimen/vertical_160"
                    android:drawableTop="@drawable/icon_tg_smoking"
                    android:drawablePadding="@dimen/vertical_10"
                    android:gravity="center"
                    android:text="@string/smoking"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_main_kugou"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="@dimen/horizontal_100"
                    android:layout_height="@dimen/vertical_160"
                    android:drawableTop="@drawable/icon_tg_kugou"
                    android:drawablePadding="@dimen/vertical_10"
                    android:gravity="center"
                    android:text="@string/kugou"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_main_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="@dimen/horizontal_100"
                    android:layout_height="@dimen/vertical_160"
                    android:drawableTop="@drawable/icon_tg_setting"
                    android:drawablePadding="@dimen/vertical_10"
                    android:gravity="center"
                    android:text="@string/setting"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_16sp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


    <!--<TextView-->
    <!--android:id="@+id/sample_text"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Hello World!" />-->
</LinearLayout>
